force-app/main/default/objects/Event_Name__c/fields/Maximum_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Attendees__c</fullName>
    <label>Maximum Attendees</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>