force-app/main/default/objects/Event_Name__c/recordTypes/In_Person_Event.recordType-meta.xml
<RecordType>
    <fullName>In_Person_Event</fullName>
    <active>true</active>
    <description>Record type for physical events.</description>
    <label>In-Person Event</label>
</RecordType>