force-app/main/default/objects/Event_Name__c/recordTypes/Virtual_Event.recordType-meta.xml
<RecordType>
    <fullName>Virtual_Event</fullName>
    <active>true</active>
    <description>Record type for virtual events.</description>
    <label>Virtual Event</label>
</RecordType>