force-app/main/default/objects/Event_Name__c/validationRules/Attendees_Not_Exceed_Maximum.validationRule-meta.xml
<ValidationRule>
    <fullName>Attendees_Not_Exceed_Maximum</fullName>
    <active>true</active>
    <errorConditionFormula>Registered_Attendees__c &gt; Maximum_Attendees__c</errorConditionFormula>
    <errorMessage>The number of registered attendees cannot exceed the maximum allowed.</errorMessage>
</ValidationRule>