force-app/main/default/objects/Event_Name__c/validationRules/Event_Date_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Date_In_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Event_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>The event date must be in the future.</errorMessage>
</ValidationRule>